--- a/functions/package.json
+++ b/functions/package.json
@@ -1,12 +1,17 @@
 {
   "name": "bhc-4",
-  "description": "Cloud Functions for Firebase",
+  "description": "Dialogflow fulfillment for the bike shop sample",
+  "version": "0.0.1",
+  "private": true,
+  "license": "Apache Version 2.0",
+  "author": "Google Inc.",
+  "engines": {
+    "node": "8"
+  },
   "scripts": {
-    "serve": "firebase serve --only functions",
-    "shell": "firebase functions:shell",
-    "start": "npm run shell",
-    "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "lint": "semistandard --fix \"**/*.js\"",
+    "start": "firebase deploy --only functions",
+    "deploy": "firebase deploy --only functions"
   },
   "dependencies": {
     "actions-on-google": "^2.8.0",
@@ -14,9 +19,5 @@
     "firebase-admin": "^8.2.0",
     "firebase-functions": "^3.0.2",
     "googleapis": "^27.0.0"
-  },
-  "engines": {
-    "node": "8"
-  },
-  "private": true
+  }
 }
